--- a/src/Vista/JP_Estadisticas.form
+++ b/src/Vista/JP_Estadisticas.form
@@ -62,7 +62,9 @@
         </Constraint>
       </Constraints>
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
     </Container>
     <Container class="java.awt.Panel" name="JP_Probabilidad">
       <Properties>
